Fixed linking and alignment

--- a/front-end/src/App.css
+++ b/front-end/src/App.css
@@ -218,7 +218,6 @@ span.googleButtonText {
 }
 .profile .header{
   border-bottom: 1px solid grey;
-  margin:24px;
   background: #ffe6de ;
 }
 
